--- a/HTML_CSS/css/style5.css
+++ b/HTML_CSS/css/style5.css
@@ -1,3 +1,25 @@
 h1{
   color: rebeccapurple;
 }
+
+#p1{
+  background-color: burlywood;
+  font-size: 20px;
+}
+
+.bold-italic {
+  font-style: italic;
+  font-weight: bold;
+}
+
+.red {
+  color: red;
+}
+
+.larger {
+  font-size: larger;
+}
+
+span{
+  font-style: italic;
+}
