--- a/HTML_CSS/css/stylelx.css
+++ b/HTML_CSS/css/stylelx.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 .italic{
   font-style: italic;
 }
 
 .bold{
   font-weight: bold;
+}
+
+body{
+  font-family: "Nunito", sans-serif;
 }
 
 .info{
