--- a/HTML_CSS/css/stylelx.css
+++ b/HTML_CSS/css/stylelx.css
@@ -4,6 +4,30 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav-logo-img {
+  width: 64px;
+  height: 64px;
+}
+
+.nav-logo{
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-items-right {
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .italic {
   font-style: italic;
 }
