--- a/HTML_CSS/css/stylelx.css
+++ b/HTML_CSS/css/stylelx.css
@@ -15,7 +15,7 @@ nav {
   height: 64px;
 }
 
-.nav-logo{
+.nav-logo {
   width: 10%;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,22 @@ nav {
   width: 15%;
   display: flex;
   justify-content: space-between;
+}
+
+.nav-links {
+  text-decoration: underline;
+  color: black;
+}
+
+.header-text {
+  text-align: center;
+  background-color: #8DB1C3;
+  padding: 80px;
+}
+
+.section1-title {
+  text-align: left;
+  padding: 80px 0 0 0;
 }
 
 .italic {
@@ -59,4 +75,13 @@ nav {
   background-color: #8DB1C3;
   margin: 10px;
   padding: 3px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 175px;
+  background-color: #8DB1C3;
+  margin-top: 20px;
 }
