--- a/HTML_CSS/css/stylelx.css
+++ b/HTML_CSS/css/stylelx.css
@@ -11,8 +11,8 @@ nav {
 }
 
 .nav-logo-img {
-  width: 64px;
-  height: 64px;
+  width: 100px;
+  height: 100px;
 }
 
 .nav-logo {
@@ -26,6 +26,7 @@ nav {
   width: 15%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .nav-links {
@@ -94,7 +95,7 @@ form {
 }
 
 .form-item {
-  padding: 10px;
+  padding: 15px;
 }
 
 .why-create {
