--- a/HTML_CSS/css/stylelx.css
+++ b/HTML_CSS/css/stylelx.css
@@ -31,7 +31,7 @@ nav {
 
 .nav-links {
   text-decoration: underline;
-  color: black;
+  color: #000000;
 }
 
 .header-text {
@@ -41,9 +41,10 @@ nav {
 }
 
 .section-title {
-  text-align: left;
+  display: flex;
   padding: 80px 0 0 0;
   color: #264653;
+  align-items: flex-start;
 }
 
 .italic {
@@ -89,13 +90,47 @@ footer {
 }
 
 form {
+  width: 550px;
+  height: 650px;
   display: flex;
   flex-direction: column;
-  width: 450px;
+  justify-content: space-between;
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 10px;
 }
 
 .form-item {
-  padding: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.input-label {
+  border-radius: 15px;
+}
+
+.form-item-button {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 50px;
+  padding: 10px;
+  align-items: center;
+  background-color: #E9C46A;
+  font-weight: 600;
+  border-radius: 10px;
+}
+
+.button-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+#create-account {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .why-create {
