--- a/HTML_CSS/css/stylelx.css
+++ b/HTML_CSS/css/stylelx.css
@@ -8,6 +8,9 @@ nav {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #f5f5f5;
 }
 
 .nav-logo-img {
@@ -15,18 +18,15 @@ nav {
   height: 100px;
 }
 
-.nav-logo {
-  width: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
 .nav-items-right {
-  width: 15%;
+  width: 275px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.nav-links:hover {
+  color: #2A9D8F;
 }
 
 .nav-links {
@@ -34,10 +34,13 @@ nav {
   color: #000000;
 }
 
-.header-text {
-  text-align: center;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   background-color: #2A9D8F;
-  padding: 80px;
+  padding-top: 90px;
+  position: static;
 }
 
 .section-title {
@@ -47,12 +50,16 @@ nav {
   align-items: flex-start;
 }
 
-.italic {
-  font-style: italic;
-}
-
-.bold {
-  font-weight: bold;
+form {
+  width: 550px;
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px #264653;
 }
 
 .main-info {
@@ -63,6 +70,20 @@ nav {
   background-color: #F8F9FA;
   width: 250px;
   text-align: center;
+}
+
+.personal-info-box {
+  display: flex;
+  justify-content: space-around;
+}
+
+.personal-info-box-title {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.personal-info-box-detail {
+  font-size: 14px;
 }
 
 .info-and-block {
@@ -87,17 +108,6 @@ footer {
   height: 175px;
   background-color: #2A9D8F;
   margin-top: 20px;
-}
-
-form {
-  width: 550px;
-  height: 650px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #f5f5f5;
-  padding: 30px;
-  border-radius: 10px;
 }
 
 .form-item {
@@ -136,4 +146,8 @@ form {
 .why-create {
   display: flex;
   flex-direction: column;
+}
+
+button:hover {
+  cursor: pointer;
 }
